fix extra margins

--- a/QnABot.css
+++ b/QnABot.css
@@ -29,7 +29,6 @@ body {
   right: 50px;
   border: 2px solid lightgray;
   box-shadow: 5px 5px 5px darkgray;
-  overflow: auto;
   z-index: 9;
 }
 
